--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
+    <div class="container">
+        <img src="./images/Rectangle Copy.png" alt="Image Not Found">
         <span>Equilibrium #3429</span>
         <span>Our Equilibrium collection promotes balance and calm.</span>
     </div>
