--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img src="./images/Rectangle Copy.png" alt="Image Not Found">
         <span>Equilibrium #3429</span>
         <span>Our Equilibrium collection promotes balance and calm.</span>
+        <span>Creation of Jules Wyvern.</span>
     </div>
 </body>
 </html>
