center component centralized

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <img src="./images/Rectangle Copy.png" alt="Image Not Found">
-        <span>Equilibrium #3429</span>
-        <span>Our Equilibrium collection promotes balance and calm.</span>
-        <span>Creation of Jules Wyvern.</span>
-    </div>
+    <div class="flex-container">
+        <div class="nft-component">
+            <img src="./images/Rectangle Copy.png" alt="Image Not Found">
+            <span>Equilibrium #3429</span>
+            <span>Our Equilibrium collection promotes balance and calm.</span>
+            <span>Creation of Jules Wyvern.</span>
+        </div>
+     </div>
 </body>
 </html>
