--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="flex-container">
         <div class="nft-component">
             <img src="./images/Rectangle Copy.png" alt="Image Not Found">
-            <span>Equilibrium #3429</span>
+            <span id="Equilibrium">Equilibrium #3429</span>
             <span>Our Equilibrium collection promotes balance and calm.</span>
             <span>Creation of Jules Wyvern.</span>
         </div>
