--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <img src="./images/Rectangle Copy.png" alt="Image Not Found">
             <span id="Equilibrium">Equilibrium #3429</span>
             <span>Our Equilibrium collection promotes balance and calm.</span>
+           <span>0.041 ETH</span>
             <span>3 days left</span>
             <hr/>
             <span>Creation of Jules Wyvern.</span>
