--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="flex-container">
         <div class="nft-component">
-            <img src="./images/Rectangle Copy.png" alt="Image Not Found">
-            <span id="Equilibrium">Equilibrium #3429</span>
-            <span>Our Equilibrium collection promotes balance and calm.</span>
-           <span>0.041 ETH</span>
-            <span>3 days left</span>
+            <img src="./images/Rectangle Copy.png" class="profile-image" alt="Image Not Found">
+            <span id="Equilibrium"><strong>Equilibrium #3429</strong></span>
+            <p id="equilibrium-content">Our Equilibrium collection promotes balance and calm.</p>
+            <img src="./images/Combined Shape.png"/><span id="combined-shape">0.041 ETH</span>
+            <img src="./images/Clock.png"/><span>3 days left</span>
             <hr/>
             <span>Creation of Jules Wyvern.</span>
         </div>
