--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
             <img src="./images/Rectangle Copy.png" class="profile-image" alt="Image Not Found">
             <span id="Equilibrium"><strong>Equilibrium #3429</strong></span>
             <p id="equilibrium-content">Our Equilibrium collection promotes balance and calm.</p>
-            <img src="./images/Combined Shape.png"/><span id="combined-shape">0.041 ETH</span>
-            <img src="./images/Clock.png"/><span>3 days left</span>
-            <hr/>
-            <span>Creation of Jules Wyvern.</span>
+           <div class="image-container">
+                <div class="combined-shape-content">
+                   <img src="./images/Combined Shape.png"/><span id="combined-shape">0.041 ETH</span>
+                </div>
+                <div class="clock-content">
+                    <img src="./images/Clock.png"/><span id="clock">3 days left</span>
+                </div>
+            </div>
+        <hr/>
+             <span>Creation of Jules Wyvern.</span>
         </div>
      </div>
 </body>
