--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <p id="equilibrium-content">Our Equilibrium collection promotes balance and calm.</p>
            <div class="image-container">
                 <div class="combined-shape-content">
-                   <img src="./images/Combined Shape.png"/><span id="combined-shape">0.041 ETH</span>
+                   <img src="./images/Combined Shape.png" alt="Image Not Found"/><span id="combined-shape">0.041 ETH</span>
                 </div>
                 <div class="clock-content">
-                    <img src="./images/Clock.png"/><span id="clock">3 days left</span>
+                    <img src="./images/Clock.png" alt="Image Not Found"/><span id="clock">3 days left</span>
                 </div>
             </div>
         <hr/>
-             <span>Creation of Jules Wyvern.</span>
+        <img src="./images/Oval.png" alt="Image Not Found" class="oval-image"/><span class="author-content">Creation of <span class="author-name">Jules Wyvern.</span></span>
         </div>
      </div>
 </body>
