--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
     <div class="flex-container">
         <div class="nft-component">
-            <img src="./images/Rectangle Copy.png" class="profile-image" alt="Image Not Found">
-            <span id="Equilibrium"><strong>Equilibrium #3429</strong></span>
+            <div class="image-container">
+                <img src="./images/Rectangle Copy.png" class="profile-image" alt="Image Not Found">
+                <div class="overlay">
+                 
+                </div>
+            </div>
+           <span id="Equilibrium"><strong>Equilibrium #3429</strong></span>
             <p id="equilibrium-content">Our Equilibrium collection promotes balance and calm.</p>
            <div class="image-container">
                 <div class="combined-shape-content">
