centralize eye image

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <div class="image-container">
                 <img src="./images/Rectangle Copy.png" class="profile-image" alt="Image Not Found">
                 <div class="overlay">
-                 
+                    <img src="./images/Shape.png" alt="Image Not Found" class="shape-image"/>
                 </div>
             </div>
            <span id="Equilibrium"><strong>Equilibrium #3429</strong></span>
             <p id="equilibrium-content">Our Equilibrium collection promotes balance and calm.</p>
            <div class="image-container">
                 <div class="combined-shape-content">
-                   <img src="./images/Combined Shape.png" alt="Image Not Found"/><span id="combined-shape">0.041 ETH</span>
+                   <img src="./images/Combined Shape.png" alt="Image Not Found" class="center"/><span id="combined-shape">0.041 ETH</span>
                 </div>
                 <div class="clock-content">
                     <img src="./images/Clock.png" alt="Image Not Found"/><span id="clock">3 days left</span>
